Fixing page-actions functionality and search bar visibility style

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/search2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/search2.less
@@ -787,7 +787,7 @@ input::placeholder {
                 }
             }
 			.cmp-searchresult-description {
-				margin: 1rem 0;
+				margin: 1rem 0 !important;
 				font-size:16px;
 				@media (max-width:767px) {
 					font-size : 16px;
